# VCE

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
DbgVicCEngine/: CMakeLists.txt  dbg_vce_main.cpp
Launcher/: CMakeLists.txt
SaveEditor/: CMakeLists.txt  save_editor_main.cpp
assets/: vce.gfx  vce.gui  vce_menubar.gui
docs/: extensions.md  namespaces.md  scripting_extensions.md  user_guide.md  vce_modders_suggestions.md
docs/old/: extensions.md  file_system_wrapper.md  save_file_formats.md  text_data.md  triggers.md
src/: VicCEngine.desktop  VicCEngine.rc  entry_point.cpp  entry_point_nix.cpp  entry_point_win.cpp  resource.h
src/ai/: ai.cpp  ai.hpp  ai_templates.hpp
src/common_types/: common_types.cpp  common_types.hpp  container_types.hpp  math_fns.hpp  prng.cpp  prng.hpp  ve_avx.hpp  ve_avx2.hpp  ve_sse3.hpp
src/culture/: culture.cpp  culture.hpp  culture_constants.hpp  culture_container_types.hpp  politics.cpp  politics.hpp  rebels.cpp  rebels.hpp
src/economy/: demographics.cpp  demographics.hpp  economy.cpp  economy.hpp  economy_constants.hpp  economy_container_types.hpp  economy_estimations.cpp  economy_estimations.hpp  economy_factory.cpp  economy_factory.hpp  economy_factory_templates.hpp  economy_rgo.cpp  economy_rgo.hpp  economy_templates.hpp
src/filesystem/: simple_fs_nix.cpp  simple_fs_win.cpp
src/gamestate/: cheats.cpp  cheats.hpp  commands.cpp  commands.hpp  date_interface.hpp  modifiers.cpp  (+10 more)
tests/: CMakeLists.txt  dcon_tests.cpp  gui_graphics_parsing_tests.cpp  test_simdify.cpp  test_simdify_demo.cpp  triggers_tests.cpp
(+200 files in other folders)
